<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
        android:id="@+id/srl_list_fragmentMovieList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srl_direction="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <GridView
                android:id="@+id/gv_list_fragmentMovieList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:verticalSpacing="24dp"
                android:columnWidth="150dp"
                android:numColumns="auto_fit"
                android:stretchMode="spacingWidthUniform"
                android:layout_centerInParent="true"/>



    </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>

</android.support.constraint.ConstraintLayout>